--- a/index.html
+++ b/index.html
@@ -42,29 +42,29 @@
             </p>
         </section>
     </main>
-    <div class="benefits">
-        <div class="benefit-lead">
+    <aside class="benefits">
+        <section class="benefit-aside">
             <h3>Lead Generation</h3>
             <img alt="icon"src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
-        </div>
-        <div class="benefit-brand">
+        </section>
+        <section class="benefit-aside">
             <h3>Brand Awareness</h3>
             <img alt="icon" src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
-        </div>
-        <div class="benefit-cost">
+        </section>
+        <section class="benefit-aside">
             <h3>Cost Management</h3>
             <img alt="icon" src="./assets/images/cost-management.png" />
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
-        </div>
-    </main>
+        </section>
+    </aside>
     <footer class="">
             &copy; 2019 Horiseon Social Solution Services, Inc.
     </footer>
