--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             </p>
         </section>
     </aside>
-    <footer class="">
-            &copy; 2019 Horiseon Social Solution Services, Inc.
+    <footer>
+           <h4> &copy; 2019 Horiseon Social Solution Services, Inc.</h4>
     </footer>
 </body>
 
