--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 
 <body>
+    <!-- replaced element into semantic elements -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
